apps/home/ezbookkeeping/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ezbookkeeping
spec: {}
status: {}
